--- a/action.yml
+++ b/action.yml
@@ -3,171 +3,242 @@ author: "Candace Savonen"
 description: "Run OTTR checks for spelling, urls, and quiz formats"
 
 inputs:
-  check_type:
-    description: "There are three types of reports that can be done and specified: 'spelling', 'urls', or 'quiz_format'."
-    required: true
-    type: string
+  check_spelling:
+    description: "Whether to run the spelling check"
+    default: false
+    type: boolean
+  check_urls:
+    description: "Whether to run the URL check"
+    default: false
+    type: boolean
+  check_quiz_form:
+    description: "Whether to run the quiz format check"
+    default: false
+    type: boolean
+  spelling_error_min:
+    description: "Number of spelling errors that should make this check fail"
+    default: 0
+    type: number
+  url_error_min:
+    description: "Number of URL errors that should make this check fail"
+    default: 0
+    type: number
+  quiz_error_min:
+    description: "Number of quiz format errors that should make this check fail"
+    default: 0
+    type: number
   sort_dictionary:
     description: "Should this action automatically alphabetize your dictionary.txt"
     default: false
     type: boolean
-  error_min:
-    description: "What number of errors should make this check fail?"
-    default: 0
-    type: number
   token:
     required: true
-
-outputs:
-  error_name:
-    description: "The name of the error that was run"
-  report_path:
-    description: "The relative path to where the report was saved."
-  error_num:
-    description: "How many errors were found."
 
 runs:
   using: "composite"
   steps:
-    - name: Declare report name
-      id: setup
+    - name: Check if any checks are enabled
+      id: validate
       run: |
-        if ${{ contains(inputs.check_type, 'spelling') }} ;then
-          echo "error_name=spelling errors" >> $GITHUB_OUTPUT
-          echo "ignore_file=resources/dictionary.txt" >> $GITHUB_OUTPUT
-        elif ${{ contains(inputs.check_type, 'urls') }} ;then
-          echo "error_name=broken url errors" >> $GITHUB_OUTPUT
-          echo "ignore_file=resources/ignore-urls.txt" >> $GITHUB_OUTPUT
-        elif ${{ contains(inputs.check_type, 'quiz_format') }} ;then
-          echo "error_name=quiz formatting errors" >> $GITHUB_OUTPUT
+        if [[ "${{ inputs.check_spelling }}" != "true" ]] && \
+           [[ "${{ inputs.check_urls }}" != "true" ]] && \
+           [[ "${{ inputs.check_quiz_form }}" != "true" ]]; then
+          echo "No checks were enabled. Please enable at least one check."
+          exit 1
         fi
       shell: bash
 
-    - name: Build components of the spell check comment
+    - name: Build components for the comments
       id: build-components
       run: |
-        echo "link_to_ignore_file=https://github.com/${GITHUB_REPOSITORY}/edit/${GITHUB_REF_NAME}/${{ steps.setup.ignore_file }}" >> $GITHUB_OUTPUT
+        echo "link_to_ignore_file=https://github.com/${GITHUB_REPOSITORY}/edit/${GITHUB_REF_NAME}/resources/dictionary.txt" >> $GITHUB_OUTPUT
         echo "time=$(date +'%Y-%m-%d-%T')" >> $GITHUB_OUTPUT
         echo "commit_id=$GITHUB_SHA" >> $GITHUB_OUTPUT
       shell: bash
 
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    # Find existing comment to update
     - name: Find Comment
       uses: peter-evans/find-comment@v3
       id: find-comment
       with:
         issue-number: ${{ github.event.pull_request.number }}
         comment-author: 'github-actions[bot]'
-        body-includes: ${{ steps.setup.outputs.error_name }}
+        body-includes: "OTTR Check Results"
 
-    - name: Status update
+    # Post initial status
+    - name: Post initial status
       uses: peter-evans/create-or-update-comment@v4
+      id: initial-comment
       with:
         comment-id: ${{ steps.find-comment.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
         body: |
-          The ${{ steps.setup.outputs.error_name }} check is currently being re-run :runner:
-          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
+          # OTTR Check Results
+          :runner: Checks are currently running...
+
+          _Last Updated: ${{ steps.build-components.outputs.time }}_
         edit-mode: replace
 
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-        token: ${{ inputs.token }}
-
-    - name: Run the check
-      id: check_results
+    # Spelling Check
+    - name: Run spelling check
+      if: inputs.check_spelling == 'true'
+      id: spelling_check
       run: |
+        echo "Running spelling check..."
+
         docker run -v ${{ github.workspace }}:/home \
           --workdir=/home \
           jhudsl/ottrpal:dev \
-          ${{ inputs.check_type }} "/home" && \
-          echo "Container exited successfully" || echo "Container failed"
+          spelling "/home" || exit_code=$?
 
-        if [ ${{ inputs.check_type }} == "spelling" ];then
-          error_name='spelling errors'
-          report_path=${{ github.workspace }}/check_reports/spell_check_results.tsv
-        elif [ ${{ inputs.check_type }} == "urls" ];then
-          error_name='broken URLs'
-          report_path=${{ github.workspace }}/check_reports/url_checks.tsv
-        elif [ ${{ inputs.check_type }} == "quiz_format" ];then
-          error_name='quiz format errors'
-          report_path=${{ github.workspace }}/check_reports/question_error_report.tsv
+        report_path=${{ github.workspace }}/check_reports/spell_check_results.tsv
+
+        if [ -f "$report_path" ]; then
+          error_num=$(cat $report_path | wc -l)
+          error_num="$((error_num-1))"
+        else
+          error_num=0
+          echo "No report file found"
         fi
 
-        # Save output
-        echo "error_name=$error_name" >> $GITHUB_OUTPUT
-        echo "report_path=$report_path" >> $GITHUB_OUTPUT
-        echo "chk_results=$chk_results" >> $GITHUB_OUTPUT
-        error_num=$(cat $report_path | wc -l)
-        error_num="$((error_num-1))"
         echo "error_num=$error_num" >> $GITHUB_OUTPUT
+        echo "status=$( [ $error_num -le ${{ inputs.spelling_error_min }} ] && echo "success" || echo "failure" )" >> $GITHUB_OUTPUT
       shell: bash
 
-    - name: Upload Artifact
-      id: upload
+    # URL Check
+    - name: Run URL check
+      if: inputs.check_urls == 'true'
+      id: url_check
+      run: |
+        echo "Running URL check..."
+
+        docker run -v ${{ github.workspace }}:/home \
+          --workdir=/home \
+          jhudsl/ottrpal:dev \
+          urls "/home" || exit_code=$?
+
+        report_path=${{ github.workspace }}/check_reports/url_checks.tsv
+
+        if [ -f "$report_path" ]; then
+          error_num=$(cat $report_path | wc -l)
+          error_num="$((error_num-1))"
+        else
+          error_num=0
+          echo "No report file found"
+        fi
+
+        echo "error_num=$error_num" >> $GITHUB_OUTPUT
+        echo "status=$( [ $error_num -le ${{ inputs.url_error_min }} ] && echo "success" || echo "failure" )" >> $GITHUB_OUTPUT
+      shell: bash
+
+    # Quiz Format Check
+    - name: Run quiz format check
+      if: inputs.check_quiz_form == 'true'
+      id: quiz_check
+      run: |
+        echo "Running quiz format check..."
+
+        docker run -v ${{ github.workspace }}:/home \
+          --workdir=/home \
+          jhudsl/ottrpal:dev \
+          quiz_format "/home" || exit_code=$?
+
+        report_path=${{ github.workspace }}/check_reports/question_error_report.tsv
+
+        if [ -f "$report_path" ]; then
+          error_num=$(cat $report_path | wc -l)
+          error_num="$((error_num-1))"
+        else
+          error_num=0
+          echo "No report file found"
+        fi
+
+        echo "error_num=$error_num" >> $GITHUB_OUTPUT
+        echo "status=$( [ $error_num -le ${{ inputs.quiz_error_min }} ] && echo "success" || echo "failure" )" >> $GITHUB_OUTPUT
+      shell: bash
+
+    # Package artifacts if any checks failed
+    - name: Package artifacts
+      if: always()
+      id: package_artifacts
+      run: |
+        mkdir -p all_reports
+        any_failures=false
+        
+        if [[ "${{ inputs.check_spelling == 'true' && steps.spelling_check.outputs.status == 'failure' }}" == "true" ]]; then
+          cp check_reports/spell_check_results.tsv all_reports/ 2>/dev/null || true
+          any_failures=true
+        fi
+        
+        if [[ "${{ inputs.check_urls == 'true' && steps.url_check.outputs.status == 'failure' }}" == "true" ]]; then
+          cp check_reports/url_checks.tsv all_reports/ 2>/dev/null || true
+          any_failures=true
+        fi
+        
+        if [[ "${{ inputs.check_quiz_form == 'true' && steps.quiz_check.outputs.status == 'failure' }}" == "true" ]]; then
+          cp check_reports/question_error_report.tsv all_reports/ 2>/dev/null || true
+          any_failures=true
+        fi
+        
+        echo "any_failures=$any_failures" >> $GITHUB_OUTPUT
+      shell: bash
+
+    # Upload combined artifacts if there were any failures
+    - name: Upload combined artifacts
+      if: steps.package_artifacts.outputs.any_failures == 'true'
+      id: upload_artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ steps.check_results.outputs.error_name }}
-        path: ${{ steps.check_results.outputs.report_path }}
+        name: ottr-check-reports
+        path: all_reports/
         if-no-files-found: error
 
-    - name: Say check is incomplete
-      if: steps.check_results.outcome == 'failure' || steps.upload.outcome == 'failure'
+    # Update comment with final results
+    - name: Update results comment
+      if: always()
       uses: peter-evans/create-or-update-comment@v4
       with:
-        comment-id: ${{ steps.find-comment.outputs.comment-id }}
+        comment-id: ${{ steps.initial-comment.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
         body: |
-          :warning: Check: ${{ steps.setup.outputs.error_name }} did not fully run! Go to the `Actions` tab to find more info.
-          Post issue to https://github.com/jhudsl/OTTR_Template/issues if this seems incorrect.
-          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
+          # OTTR Check Results
+          
+          ### Summary
+          ${{ inputs.check_spelling == 'true' && format('- Spelling check: {0} {1} ({2} errors found, threshold: {3})', 
+            steps.spelling_check.outputs.status == 'success' && ':white_check_mark:' || ':x:',
+            steps.spelling_check.outputs.status == 'success' && 'PASSED' || 'FAILED',
+            steps.spelling_check.outputs.error_num,
+            inputs.spelling_error_min) || '' }}
+          ${{ inputs.check_urls == 'true' && format('- URL check: {0} {1} ({2} errors found, threshold: {3})', 
+            steps.url_check.outputs.status == 'success' && ':white_check_mark:' || ':x:',
+            steps.url_check.outputs.status == 'success' && 'PASSED' || 'FAILED',
+            steps.url_check.outputs.error_num,
+            inputs.url_error_min) || '' }}
+          ${{ inputs.check_quiz_form == 'true' && format('- Quiz format check: {0} {1} ({2} errors found, threshold: {3})', 
+            steps.quiz_check.outputs.status == 'success' && ':white_check_mark:' || ':x:',
+            steps.quiz_check.outputs.status == 'success' && 'PASSED' || 'FAILED',
+            steps.quiz_check.outputs.error_num,
+            inputs.quiz_error_min) || '' }}
+          
+          ${{ steps.package_artifacts.outputs.any_failures == 'true' && format('### :warning: Some Checks Failed [Click here to download detailed error reports]({0})', steps.upload_artifacts.outputs.artifact-url) || '### :tada: All checks passed!' }}
+          
+          _Last Updated: ${{ steps.build-components.outputs.time }}_
         edit-mode: replace
 
-    - name: Stop if failure
-      #I don't love repeating this condition a second time here
-      if: steps.check_results.outcome == 'failure' || steps.upload.outcome == 'failure'
-      run: exit 1
-      shell: bash
-
-    - name: There are errors!
-      if: ${{ steps.check_results.outputs.error_num > inputs.error_min }}
-      uses: peter-evans/create-or-update-comment@v4
-      with:
-        comment-id: ${{ steps.find-comment.outputs.comment-id }}
-        issue-number: ${{ github.event.pull_request.number }}
-        body: |
-          :warning: ${{ steps.setup.outputs.error_name }} :warning:
-          There are ${{ steps.setup.outputs.error_name }} that need to be addressed.
-          Click here :arrow_right: [for ${{ steps.setup.outputs.error_name }}!](${{ steps.upload.outputs.artifact-url }}) :exclamation:
-          Add errors that aren't errors to the [${{ steps.setup.outputs.ignore_file }}](${{ steps.build-components.outputs.link_to_ignore_file }}) file of this repo.
-          If you are having troubles see [this guide](https://www.ottrproject.org/faqs.html#Most_Common_Errors)
-          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
-        edit-mode: replace
-
-    - name: Fail if too many errors
-      if: ${{ steps.check_results.outputs.error_num > inputs.error_min }}
+    # Final exit if any checks failed
+    - name: Check for failures
+      if: always()
       run: |
-        echo ${{ steps.check_results.outputs.error_num }}
-        exit 1
+        if [[ "${{ steps.package_artifacts.outputs.any_failures }}" == "true" ]]; then
+          echo "One or more checks failed"
+          exit 1
+        fi
       shell: bash
-
-    - name: Don't fail if not too many errors
-      if: ${{ steps.check_results.outputs.error_num <= inputs.error_min }}
-      run: |
-        echo ${{ steps.check_results.outputs.error_num }}
-      shell: bash
-
-    - name: No errors comment
-      if: ${{ steps.check_results.outputs.error_num <= inputs.error_min }}
-      uses: peter-evans/create-or-update-comment@v4
-      with:
-        comment-id: ${{ steps.find-comment.outputs.comment-id }}
-        issue-number: ${{ github.event.pull_request.number }}
-        body: |
-          No ${{ steps.setup.outputs.error_name }}! :tada:
-          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
-        edit-mode: replace
 
 branding:
   icon: "briefcase"
